k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: madace
  labels:
    name: madace
    app: madace-method
